# git-bigstore-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: cache.rs  config.rs  dvc.rs  filter.rs  git.rs  lfs_adapter.rs  lib.rs  main.rs  transfer.rs  types.rs
src/backend/: mod.rs  rclone.rs  store.rs
tests/: integration.rs
