[package]
name = "bigstore-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Large files in git, your bucket, one binary, zero config."
license = "Apache-2.0"

[[bin]]
name = "git-bigstore"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3.32"
globset = "0.4.18"
hex = "0.4"
indicatif = "0.18.4"
md-5 = "0.10.6"
object_store = { version = "0.11", features = ["aws", "gcp", "azure"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10"
tempfile = "3.27.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
md-5 = "0.10.6"
serde_json = "1.0.149"
walkdir = "2.5.0"
